--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4167,6 +4167,7 @@ input, select, textarea {
 	}
 	#resume-link:hover {
 		text-shadow: 0px 2px 5px #666;
+		transition: ease 1s;
 	}
 	#resume-pdf {
 		font-family: 'Font Awesome 5 Free';
